<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_layout"
    android:backgroundTint="@color/color_layout"
    android:contentDescription="@string/contenido"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/text1"
        android:layout_width="251dp"
        android:layout_height="30dp"
        android:layout_marginTop="152dp"
        android:gravity="center"
        android:text="@string/txt1"
        android:textAlignment="gravity"
        android:textColor="@color/violeta_boton"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/txtPesos"
        android:layout_width="201dp"
        android:layout_height="41dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/Ingreso"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text1" />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.158"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text3">

        <RadioButton
            android:id="@+id/rbDolar"
            android:layout_width="119dp"
            android:layout_height="40dp"
            android:buttonTint="@color/violeta_boton"
            android:elegantTextHeight="false"
            android:inputType="none"
            android:text="@string/dolar"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.157"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text3" />

        <RadioButton
            android:id="@+id/rbEuro"
            android:layout_width="126dp"
            android:layout_height="41dp"
            android:buttonTint="@color/violeta_boton"
            android:text="@string/euro"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.161"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rbDolar" />

        <RadioButton
            android:id="@+id/rbReal"
            android:layout_width="134dp"
            android:layout_height="35dp"
            android:buttonTint="@color/violeta_boton"
            android:text="@string/real"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.166"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rbEuro" />
    </RadioGroup>

    <TextView
        android:id="@+id/text3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:text="@string/seleccion_moneda"
        android:textColor="@color/violeta_boton"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtPesos" />

    <Button
        android:id="@+id/btnConvertir"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/violeta_boton"
        android:text="@string/convertir"
        app:layout_constraintEnd_toStartOf="@+id/btnReinicio"
        app:layout_constraintHorizontal_bias="0.776"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvResultado" />

    <Button
        android:id="@+id/btnReinicio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="80dp"
        android:backgroundTint="@color/violeta_boton"
        android:text="@string/reinicio"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvResultado" />

    <TextView
        android:id="@+id/tvResultado"
        android:layout_width="162dp"
        android:layout_height="33dp"
        android:layout_marginTop="120dp"
        android:gravity="center"
        android:hint="@string/resultado"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text3" />

    <ImageView
        android:id="@+id/logo_main"
        android:layout_width="89dp"
        android:layout_height="85dp"
        android:layout_marginTop="64dp"
        android:contentDescription="@string/contenido"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@drawable/bolsadinero" />
</androidx.constraintlayout.widget.ConstraintLayout>